# humon

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README-preprocess.md  README.md  ansi.py  build-linux.py  build.py  build.sh  buildTestFiles.sh  buildUtfnTestFiles.sh  buildlib.sh  buildlib2.sh  buildso.sh  buildtest.sh  buildtest2.sh  dox-humon-c  dox-humon-cpp  getVersion.py  humon-cpp.pc.in  humon.sln  hux  install-linux.py  make.py  runAllTests.py  todo.txt  updateReadme.py
apps/: CMakeLists.txt
apps/hux/: hux.cpp
apps/readmeSrc/: usage.c  usage.cpp  usage_cpp_out.txt
inc/: ansiColors.h  humon.h  humon.hpp  humon.internal.h  humon2.h  humon2c.h  humon2cpp.h
inc/impl/: node.inl  parse.inl  tokenize.inl  trove.inl
include/humon/: ansiColors.h  humon.h  humon.hpp  version.h
lang/grammar/: humon.l  humon.y
legacy/: buildlib.sh  buildtest.sh
legacy/inc/: ansiTerm.h  humon.h
legacy/inc/impl/: node.inl  parse.inl  trove.inl
legacy/src/: test.cpp  test2.cpp  tokenize-old.c
python/: build.py  sample.py  setup.py  todo.txt
python/humon/cpkg/: common.h  humonModule.c  node-py.c  token-py.c  trove-py.c
python/src/: test0.py  test1.py  testRun.py
python/src/enumConstsModule/: enumConstsModule.c
python/src/humon/: enums.py
python/src/humonModule/: common.h  humonModule.c  node-py.c  token-py.c  trove-py.c  utils.c
samples/: hudo.hu  usage.c  usage.cpp
samples/hux/: hux.cpp
samples/usage-c/: usage.c
samples/usage-cpp/: usage.cpp
src/: CMakeLists.txt  ansiColors.c  changes.c  encoding.c  humon-c.pc.in  humon.cpp  humon.internal.h  humon2.cpp  humon2Node.c  humon2Parse.c  humon2Tokenize.c  humon2Trove.c  humon2Utils.c  node.c  parse.c  parse.cpp  printing.c  test.cpp  test2.cpp  token.c  tokenize.c  tokenize.cpp  trove.c  utils.c  vector.c
src/samples/: hudo.hu  materials.hu  sample-usage-c-d  sample-usage-cpp-d  usage.c  usage.cpp
src/test/: apiTests.cpp  cppTests.cpp  dataTests.cpp  testData.h  testDataCpp.h  testMain.cpp  utf8Tests.cpp
src/test/testFiles/: utf8.hu  utf8bom.hu
test/: CMakeLists.txt  apiTests.cpp  apiTests.hpp  changesTests.hpp  commentTests.cpp  commentTests.hpp  cppTests.cpp  cppTests.hpp  dataTests.cpp  dataTests.hpp  errorTests.cpp  errorTests.hpp  makeTest.py  testData.h  testDataCpp.h  testMain.cpp  utest-main.cpp  utest.hpp  utf8Tests.cpp  utf8Tests.hpp  vectorTests.cpp  wakkaTests.cpp  ztestMaker.py
test/testFiles/: .gitattributes  comments.hu  comments.hu.pm.mn.ca.bn.hu  comments.hu.pm.mn.ca.by.hu  comments.hu.pm.mn.cn.bn.hu  comments.hu.pm.mn.cn.by.hu  comments.hu.pm.my.ca.bn.hu  comments.hu.pm.my.ca.by.hu  comments.hu.pm.my.cn.bn.hu  comments.hu.pm.my.cn.by.hu  comments.hu.pp.mn.ca.bn.hu  comments.hu.pp.mn.ca.by.hu  comments.hu.pp.mn.cn.bn.hu  comments.hu.pp.mn.cn.by.hu  comments.hu.pp.my.ca.bn.hu  comments.hu.pp.my.ca.by.hu  comments.hu.pp.my.cn.bn.hu  comments.hu.pp.my.cn.by.hu  comments.hu.px.mn.cn.by.hu  commentsCstyle.hu.pc.my.ca.bn.hu  commentsCstyle.hu.pc.my.ca.by.hu  commentsCstyle.hu.pm.mn.ca.bn.hu  commentsCstyle.hu.pm.mn.ca.by.hu  commentsCstyle.hu.pm.mn.cn.bn.hu  commentsCstyle.hu.pm.my.ca.bn.hu  commentsCstyle.hu.pm.my.ca.by.hu  commentsCstyle.hu.pm.my.cn.bn.hu  commentsCstyle.hu.pm.my.cn.by.hu  commentsCstyle.hu.pp.mn.ca.bn.hu  commentsCstyle.hu.pp.mn.ca.by.hu  commentsCstyle.hu.pp.mn.cn.bn.hu  commentsCstyle.hu.pp.my.ca.bn.hu  commentsCstyle.hu.pp.my.ca.by.hu  commentsCstyle.hu.pp.my.cn.bn.hu  commentsCstyle.hu.pp.my.cn.by.hu  encTest.hu  quothTheHumon.hu.pc.mn.ca.bn.hu  quothTheHumon.hu.pc.my.cn.by.hu  quothTheHumon.hu.pm.mn.ca.bn.hu  quothTheHumon.hu.pm.mn.ca.by.hu  (+78 more)
test/ztest/: ztest-main.cpp  ztest.cpp  ztest.hpp
vs/dll/: dll.vcxproj  dllmain.c
vs/hux/: hux.vcxproj
vs/lib/: lib.vcxproj
vs/test/: test.vcxproj
vscode/humon-lang/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode/humon-lang/syntaxes/: humon.tmLanguage.json
